[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://tileset.png" type="Texture" id=2]
[ext_resource path="res://Map/Map.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.0
height = 2.0

[node name="Player" type="RigidBody2D"]
collision_mask = 6
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.90735e-06, -1.90735e-06 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 48, 144, 16, 16 )

[node name="Camera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
limit_smoothed = true
smoothing_enabled = true
editor_draw_drag_margin = true

[node name="GroundCheck" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 6
collide_with_areas = true

[node name="GroundCheckLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -3, 10 )
collision_mask = 6
collide_with_areas = true

[node name="GroundCheckRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 3, 10 )
collision_mask = 6
collide_with_areas = true

[node name="Map" parent="." instance=ExtResource( 3 )]
